fixed alignment issues for Serach page

--- a/client-infrastructure/src/ocInfra/css/omnichannel.css
+++ b/client-infrastructure/src/ocInfra/css/omnichannel.css
@@ -1848,9 +1848,10 @@ width: 15%;
 }
 @media only screen and (min-width: 769px) {
 .oc-logo {
-		  width: 20%;
+		  width: 97px;
 		  margin-left: 10px;
 		  margin-top: 5px;
+      height: 57px;
 	
 	}
 }
